--- a/Js Projects/index.html
+++ b/Js Projects/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Para Generator</title> 
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+    <h1>Para Generator</h1>
+
+    <input type="number"
+    id="numOfwords"
+    placeholder="Enter Number of Words
+    ">
+    <button>Generate</button>
+    <p class="paras">Lorem ipsum dolor sit amet consectetur adipisicin g elit. Laudantium autem vero soluta impedit fugit id corrupti quas accusantium ea distinctio!</p>
+    </div>
 </body>
+<script src="main.js"></script>
 </html>
