--- a/JAVASCRIPT BY 6 PACK PROGRAMMER/main.html
+++ b/JAVASCRIPT BY 6 PACK PROGRAMMER/main.html
@@ -1,3 +1,7 @@
+
+1/8/2023
+Update 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,13 +21,12 @@
             font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             color: white;
         } -->
-        
     </style>
 </head>
 <body>
     <h1>Hii</h1>
-    <h2>Hii</h2> 
-    <button>Cancle</button>
+    <!-- <h2>Hii</h2> 
+    <button>Cancle</button> -->
     <!-- <input type="text" id="myInput" placeholder="Enter Your name">
     <button id="myBtn">Click</button>    
     <button id="delete">Delete</button> -->
@@ -37,5 +40,6 @@
 <!-- <script src="./9_Event_Listner.js"></script> -->
 <!-- <script src="./10_Math_object.js"></script> -->
 <!-- <script src="./11_Local_storage_And_session_storage..js"></script> -->
-<script src="./13_SetTimeOut_SetInterval.js"></script>
+<!-- <script src="./13_SetTimeOut_SetInterval.js"></script> -->
+<script src="./opps.js"></script>
 </html> 
