--- a/Functions IN JavaScript/index.html
+++ b/Functions IN JavaScript/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Hii</h1>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
+    <!-- <script src="basicJavascript.js"></script> -->
+    <script src="callbackFuntion.js"></script>
 </body>
 </html>
