--- a/Functions IN JavaScript/Love Babbar/index.html
+++ b/Functions IN JavaScript/Love Babbar/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1> hii</h1>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
+    <script src="defaultPera.js"></script>
 </body>
 </html>
