--- a/Js Dom Love Babbar/main.html
+++ b/Js Dom Love Babbar/main.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>helo i am shushant </h1>
+    <p id="wrapper">hello ji :) </p>
+    <a href="https://wwww.facebook.com">Facebook1</a>
+    <a href="https://wwww.facebook.com">Facebook2</a>
+    <a href="https://wwww.facebook.com">Facebook3</a>
     <script src="index.js"> </script>
 </body>
 </html>
